Clerk Auth applied needs some conf

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@clerk/clerk-react": "^5.23.0",
     "@prisma/client": "^6.4.0",
     "@supabase/supabase-js": "^2.48.1",
     "@testing-library/dom": "^10.4.0",
@@ -16,6 +17,7 @@
     "prisma": "^6.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router": "^7.2.0",
     "react-router-dom": "^7.2.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
