--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "better-sqlite3": "^11.8.1",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "lucide-react": "^0.476.0",
     "mongodb": "^6.13.0",
     "prisma": "^6.4.0",
     "react": "^19.0.0",
