--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@clerk/clerk-react": "^5.23.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.6",
     "@prisma/client": "^6.4.0",
     "@supabase/supabase-js": "^2.48.1",
     "@testing-library/dom": "^10.4.0",
