--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.4.1",
+    "@supabase/supabase-js": "^2.49.3",
+    "axios": "^1.8.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
